--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,9 @@
   "name": "yook/yook-climate-change",
   "license": "proprietary",
   "require": {
-    "php": "~8.0"
+    "php": "~8.0",
+    "guzzlehttp/guzzle": "^7.0",
+    "friendsofphp/php-cs-fixer": "^2.18"
   },
   "autoload": {
     "psr-4": {
